<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="yoloyoj.pub.ui.list.EventsListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/activity_events_list" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="yoloyoj.pub.ui.chatlist.ChatListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="yoloyoj.pub.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
