<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/editUserImage"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:shapeAppearanceOverlay="@style/rounded"
        tools:background="@color/colorPrimaryDark"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/setNewImageButton"
        app:icon="@drawable/ic_baseline_edit_24"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/editUserImage"
        app:layout_constraintEnd_toEndOf="@+id/editUserImage"
        app:layout_constraintStart_toEndOf="@+id/editUserImage"
        app:layout_constraintTop_toBottomOf="@+id/editUserImage" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:elevation="1dp"
        android:ems="10"
        android:hint="@string/hint_edit_profile_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserImage"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/label_edit_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_edit_profile_name"
        app:layout_constraintBottom_toTopOf="@+id/editUserName"
        app:layout_constraintStart_toStartOf="@+id/editUserName" />

    <EditText
        android:id="@+id/editUserStatus"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_edit_profile_status"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserName"
        app:layout_constraintVertical_bias="0.2"
        android:autofillHints="status" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_edit_profile_status"
        app:layout_constraintBottom_toTopOf="@+id/editUserStatus"
        app:layout_constraintStart_toStartOf="@+id/editUserStatus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>