<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:allowBackup="true"
    android:background="@color/design_default_color_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/event_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:contentPadding="6dp">

        <LinearLayout
            android:id="@+id/event_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/labelEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/regularFont"

                android:text="@string/label_event_name" />

            <EditText
                android:id="@+id/event_header_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="@string/hint_event_name"
                android:inputType="textPersonName"
                android:textColor="@color/design_default_color_on_secondary"
                android:theme="@style/bigFont"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="3dp">

                    <Button
                        android:id="@+id/pickDateBtn"
                        android:theme="@style/regularFont"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/button_pick_date"
                        android:background="@android:drawable/editbox_background"
                        android:textColor="@color/colorAccent"
                        app:backgroundTint="@color/colorBackgroundBack"
                        app:backgroundTintMode="add"
                        app:cornerRadius="8dp"

                        android:layout_gravity="center_horizontal"
                        tools:ignore="ButtonStyle,NestedWeights"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:theme="@style/regularFont"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="3dp">

                <Button
                    android:id="@+id/pickTimeBtn"
                    android:theme="@style/regularFont"
                    android:background="@android:drawable/editbox_background"
                    android:textColor="@color/colorAccent"
                    app:backgroundTint="@color/colorBackgroundBack"
                    app:backgroundTintMode="add"
                    app:cornerRadius="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/button_pick_time"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    tools:ignore="ButtonStyle,NestedWeights" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:theme="@style/regularFont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"/>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/labelEventPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/regularFont"

                android:text="@string/label_event_place" />

            <EditText
                android:id="@+id/event_place_header_edit"
                android:theme="@style/regularFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_event_place"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="14sp"
                tools:ignore="TextFields" />

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                tools:srcCompat="@drawable/example"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/labelEventDescription"
                android:theme="@style/regularFont"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_event_description" />

            <EditText
                android:id="@+id/event_describe_header_edit"
                android:theme="@style/regularFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_event_description"
                android:minLines="3"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimary"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/event_set_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_event_create"
                android:background="@color/colorAccent"
                android:textColor="@color/colorBackgroundFace"
                android:theme="@style/regularFont"
                app:backgroundTint="@color/colorAccent"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
