<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.enter.registration.RegistrationActivity">

    <LinearLayout
        android:id="@+id/registerFailBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:elevation="2dp"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/please"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:text="@string/please_check"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:theme="@style/regularFont" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerFailOk"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:onClick="onClickBannerClose"

                android:text="@android:string/ok"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:theme="@style/regularFont" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/regularFont"
                android:textColor="@color/colorAccent"

                android:text="@string/avatar_text"
                android:textAlignment="center" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatarEdit"
                android:layout_width="168dp"
                android:layout_height="168dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_profile_back_cat"
                android:onClick="onAvatarChoose"
                android:scaleType="centerCrop"
                android:theme="@style/rounded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/hint_edit_profile_name"
                android:inputType="textPersonName"

                android:minEms="12"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp"
                android:theme="@style/regularFont" />

            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_number_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minEms="12"

                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp"
                android:theme="@style/regularFont" />

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/hint_email_example"

                android:inputType="none|textWebEmailAddress"
                android:minEms="12"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp"
                android:theme="@style/regularFont" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/hint_passowrd"
                android:inputType="textPersonName"

                android:minEms="12"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="16sp"
                android:theme="@style/regularFont" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"

                android:layout_marginStart="48dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="48dp"
                android:background="@color/colorAccent"
                android:onClick="onClickRegister"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"

                android:text="@string/button_start"
                android:textColor="@color/colorBackgroundFace"
                android:theme="@style/regularFont"
                app:backgroundTint="@color/colorAccent" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>